src/objects/PMBA_Usage_Details__c.object
<CustomObject>
    <fields>
        <fullName>PMBA_Date_and_Time__c</fullName>
        <label>Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMBA_Product_Feature__c</fullName>
        <label>Product Feature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMBA_User_Id__c</fullName>
        <label>User Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Usage Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PMBA_Application_Usage_Details</fullName>
        <columns>NAME</columns>
        <columns>PMBA_User_Id__c</columns>
        <columns>PMBA_Product_Feature__c</columns>
        <columns>PMBA_Date_and_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>Application Usage Details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PMBAUD-{00000000}</displayFormat>
        <label>Usage Details Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>